<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="游戏登录"
            android:textSize="22sp"
            />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:text="v1.0.0"
            android:textSize="12sp"
            />

    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >

        <EditText
            android:id="@+id/et_login_username"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:paddingLeft="30dp"
            android:hint="@string/login_username_hint"
            android:textSize="12sp"
            android:maxLength="20"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:background="@drawable/login_edittext_bg"
            />

        <ImageView
            android:layout_width="15dp"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/input_person_icon"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >

        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:paddingLeft="30dp"
            android:hint="@string/login_password_hint"
            android:textSize="12sp"
            android:maxLength="20"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:background="@drawable/login_edittext_bg"
            />

        <ImageView
            android:layout_width="15dp"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/input_pwd_icon"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:gravity="center_vertical"
        android:layout_marginTop="5dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/auto_login_checkbox"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:checked="true"
                />
            <TextView
                android:id="@+id/auto_login_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center_vertical"
                android:text="@string/loginAuto"
                android:textSize="14sp"/>
        </LinearLayout>
        <TextView
            android:id="@+id/login_forgetpwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:text="@string/loginForgetPwd"
            android:textSize="14sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/login_commit"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:background="@drawable/wm_button_blue"
        android:text="@string/login"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/colorWhiteText"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal">
        <TextView
            android:id="@+id/login_accountreg_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/loginAccountReg"
            android:textColor="@color/colorGreenText"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/loginSeparate"
            android:textColor="@color/colorGreenText"/>
        <TextView
            android:id="@+id/login_mobilereg_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/loginMobileReg"
            android:textColor="@color/colorGreenText"/>
    </LinearLayout>

</LinearLayout>
